parte header e prime due parti main insieme per problemi connessione

--- a/index.html
+++ b/index.html
@@ -2,11 +2,77 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,600,400,800" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./framework-12bool.css">
     <link rel="stylesheet" href="./style.css">
     <title>Helbiz</title>
   </head>
   <body>
+    <header>
+
+      <header>
+
+           <div class="container barra ">
+             <div class="logo col-xs-3 col-md-3 col-lg-3">
+               <a href="#"><img src="img/helbiz-logo.svg" alt="logo"></a>
+             </div>
+
+             <div class="menu d-none-xs d-none-md  col-lg-9">
+               <ul>
+                 <li><a href="#">HELBIZGO</a></li>
+                 <li><a href="#">HELBIZCAR</a></li>
+                 <li><a href="#">ABOUT</a></li>
+                 <li><a href="#">CITIES</a></li>
+                 <li><a href="#">CAREERS</a></li>
+                 <li><a href="#">SHOP</a></li>
+                 <li><a href="#">ENG</a></li>
+                 <li class="ita"><a href="#">ITA</a></li>
+                 <li><a href="#">ES</a></li>
+               </ul>
+             </div>
+
+           </div>
+
+
+
+           <div class=" container strada col-xs-12 col-md-12 col-lg-12">
+             <div class="testo centered-text">
+             <h1>Shared Mobility of Tomorrow</h1>
+             <p>Bringing the future of shared mobility to the streets of the world</p>
+             <img src="img/app-store-badge.svg" alt="buttom app store">
+             <img src="img/google-play-badge.svg" alt=" buttom google play">
+             </div>
+           </div>
+      </header>
+
+      <main>
+
+          <div class="container prodotti">
+              <div class="segway col-xs-12 col-md-6 col-lg-6">
+                <div class="centered-text">
+                  <h3>HelbizGO</h3>
+                  <p>Next generation of electric city bikes.</p>
+                  <a href="#"> Learn More > </a>
+                </div>
+                <img src="img/go-segway.jpg" alt="segway">
+              </div>
+            <div class="bike col-xs-12 col-md-6 col-lg-6">
+              <div class="centered-text">
+                <h3>HelbizBike</h3>
+                <p>Seamless e-scooter sharing globally.</p>
+                <a href="#">Coming Soon </a>
+              </div>
+              <img src="img/bike.jpg" alt="bike">
+            </div>
+        </div>
+
+      </main>
+
+      <footer>
+
+      </footer>
 
   </body>
 </html>
