parte panchine saltando parte vista in classe da rec

--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
             </div>
         </div>
 
+        <!-- parte telefono vista in classe -->
+
+        <div class="container panchine">
+          <div class="centered-text testo1">
+            <h4>Smart mobility on two wheels</h4>
+            <p>A cleaner and more convenient alternative to get around your city</p>
+            <a href="#"> Learn More > </a>
+          </div>
+        </div>
+
       </main>
 
       <footer>
